[package]
name = "arch"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
riscv = "0.13"
loongArch64 = { version = "0.2", optional = true }
sbi-rt = "0.0.3"

[features]
default = ["irq", "riscv64"]
# Kernel interrupt
irq = []
# CPU Architecture
riscv64 = []
loongarch = ["dep:loongArch64"]
