[package]
name = "kernel"
version = "0.1.0"
authors = ["ChenRuiwei <1982833213@qq.com>"]
edition = "2024"

[dependencies]
arch = { path = "../arch/" }
config = { path = "../config/" }

signal = { path = "../modules/signal/" }
driver = { path = "../driver/" }
logging = { path = "../modules/logging/" }
executor = { path = "../modules/executor/" }
# systype = { path = "../modules/systype/" }
# memory = { path = "../modules/memory" }
vfs = { path = "../modules/vfs/" }
vfs-core = { path = "../modules/vfs-core/" }
# time = { path = "../modules/time/" }
# timer = { path = "../modules/timer/" }
page = { path = "../modules/page/" }
net = { path = "../modules/net/" }
recycle-allocator = { path = "../crates/recycle-allocator/" }
async-utils = { path = "../crates/async-utils/" }
sbi-print = { path = "../crates/sbi-print/" }
range-map = { path = "../crates/range-map/" }
backtrace = { path = "../crates/backtrace/" }

cfg-if = "1.0"
crate_interface = "0.1"
buddy_system_allocator = "0.11"
bitflags = "2.9"
bit_field = "0.10"
xmas-elf = "0.10"
log = "0.4"
hashbrown = "0.15"
spin = { version = "0.10", features = ["lazy"] }
riscv = "0.13"
virtio-drivers = { version = "0.9" }
paste = "1.0"
strum = { version = "0.27", default-features = false, features = ["derive"] }
numeric-enum-macro = "0.2.0"
async-trait = "0.1"
downcast-rs = { version = "2.0", default-features = false }
sbi-rt = { version = "0.0.3", features = ["legacy"] }


[build-dependencies]
config = { path = "../config" }


[features]
strace = []
smp = []
preempt = []
debug = []
vf2 = ["config/vf2"]
final2 = []
