[package]
name = "page"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { path = "../../arch/" }
config = { path = "../../config/" }
systype = { path = "../systype/" }
# sync = { path = "../sync/" }
# memory = { path = "../memory/" }
device-core = { path = "../device-core/" }
macro-utils = { path = "../../crates/macro-utils/" }


log = "0.4"
lru = "0.13"
spin = "0.10"
intrusive-collections = "0.9"
enum-as-inner = "0.6"
hashbrown = "0.15"
paste = "1.0"
